--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
+# Ignore environment variables
+.env
+.env.*
+!.env.example
+
+# Ignore logs
+*.log
+log/
+
+# Ignore system files
 .DS_Store
+Thumbs.db
+
+# Ruby specific
+*.gem
+*.rbc
+/.config
+/coverage/
+/InstalledFiles
+/pkg/
+/spec/reports/
+/spec/examples.txt
+/test/tmp/
+/test/version_tmp/
+/tmp/
+
+# Ignore Ruby environment manager files
+.bundle/
+vendor/bundle
+.rvmrc
+.ruby-version
+
+# Ignore editor specific files
+.idea/
+.vscode/
+*.swp
+*.swo
