--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Настройки сервера
+# Server settings
 PORT=4567
 
-# Вебхуки
+# Webhooks
 WEBHOOK_URL=https://your-n8n-instance.example.com/webhook-test/your-webhook-id
 
-# Режим отладки (true/false)
+# Debug mode (true/false)
 DEBUG=false
