--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ WEBHOOK_URL=https://your-n8n-instance.example.com/webhook-test/your-webhook-id
 
 # Debug mode (true/false)
 DEBUG=false
+
+# AppSignal
+APPSIGNAL_PUSH_API_KEY=your-appsignal-push-api-key
